feat: update proto + add dampering coeff through api
